bootstrap/k8s/name-deployment-ext-sampling.yml
---
---
apiVersion: v1
kind: Service
metadata:
  name: animal-name-service
  labels:
    app: animal-name-service
spec:
  ports:
    - port: 9000
      name: http
  selector:
    app: animal-name-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animal-name-service
  labels:
    app: animal-name-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: animal-name-service
  template:
    metadata:
      labels:
        app: animal-name-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: app
        image: allen88/animal-name-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: agent
          mountPath: "/agent"
      volumes:
      - name: agent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: scientist-name-service
  labels:
    app: scientist-name-service
spec:
  ports:
    - port: 8090
      name: http
  selector:
    app: scientist-name-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scientist-name-service
  labels:
    app: scientist-name-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scientist-name-service
  template:
    metadata:
      labels:
        app: scientist-name-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: app
        image: allen88/scientist-name-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: agent
          mountPath: "/agent" # <-- change the mount path not to overwrite your .jar
      volumes:
      - name: agent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: name-generator-service
  labels:
    app: name-generator-service
spec:
  ports:
    - port: 8080
      name: http
    - port: 8081
      name: mgmt
  selector:
    app: name-generator-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-generator-service
  labels:
    app: name-generator-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: name-generator-service
  template:
    metadata:
      labels:
        app: name-generator-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: app
        image: allen88/name-generator-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8081
          name: mgmt
        volumeMounts:
        - name: agent
          mountPath: "/agent" # <-- change the mount path not to overwrite your .jar
      volumes:
      - name: agent
        emptyDir: {}
