bootstrap/k8s/name-deployment-skywalking.yml
---
---
apiVersion: v1
kind: Service
metadata:
  name: animal-name-service
  labels:
    app: animal-name-service
spec:
  ports:
    - port: 9000
      name: http
  selector:
    app: animal-name-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animal-name-service
  labels:
    app: animal-name-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: animal-name-service
  template:
    metadata:
      labels:
        app: animal-name-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: app
        image: allen88/animal-name-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: agent
          mountPath: "/agent"
      volumes:
      - name: agent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: scientist-name-service
  labels:
    app: scientist-name-service
spec:
  ports:
    - port: 8090
      name: http
  selector:
    app: scientist-name-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scientist-name-service
  labels:
    app: scientist-name-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scientist-name-service
  template:
    metadata:
      labels:
        app: scientist-name-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: app
        image: allen88/scientist-name-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: agent
          mountPath: "/agent" # <-- change the mount path not to overwrite your .jar
      volumes:
      - name: agent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: name-generator-service
  labels:
    app: name-generator-service
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: name-generator-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-generator-service
  labels:
    app: name-generator-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: name-generator-service
  template:
    metadata:
      labels:
        app: name-generator-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: app
        image: allen88/name-generator-service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: agent
          mountPath: "/agent" # <-- change the mount path not to overwrite your .jar
      volumes:
      - name: agent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: otel-skywalking-collector
  namespace: istio-system
  labels:
    app: otel-skywalking-collector
spec:
  ports:
  - port: 12800
    name: http
  - port: 11800
    name: grpc
  selector:
    app: otel-skywalking-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-skywalking-collector
  namespace: istio-system
  labels:
    app: otel-skywalking-collector
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-skywalking-collector
  template:
    metadata:
      labels:
        app: otel-skywalking-collector
        version: v1
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: app
        image: allen88/otel-skywalking-collector:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 12800
          name: http
        - containerPort: 11800
          name: grpc
---
