bootstrap/k8s/otel-collector-sampling.yml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-sampling
  namespace: istio-system
  labels:
    app: otel-collector-sampling
spec:
  ports:
  - port: 9411
    name: http-zipkin
  - port: 14250
    name: grpc-jaeger
  selector:
    app: otel-collector-sampling
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector-sampling
  namespace: istio-system
  labels:
    app: otel-collector-sampling
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector-sampling
  template:
    metadata:
      labels:
        app: otel-collector-sampling
        version: v1
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: app
        image: allen88/otel-collector-sampling:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 14250
          name: grpc-jaeger
        - containerPort: 9411
          name: http-zipkin
        volumeMounts:
        - name: config-volume
          mountPath: "/u01/config"
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: otel-collector-sampling
---
