bootstrap/k8s/name-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: name-generator-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: name-generator
spec:
  hosts:
  - "*"
  gateways:
  - name-generator-gateway
  http:
  - match:
    - uri:
        exact: /api/v1/names/random
    route:
    - destination:
        host: name-generator-service
        port:
          number: 8080
  - match:
    - uri:
        prefix: /actuator
    route:
    - destination:
        host: name-generator-service
        port:
          number: 8081
